--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 </head>
 
-<body style="color: #fff; background: rgb(0, 5, 31);"
->   
+<!-- style="color: #fff; background: rgb(0, 5, 31);" -->
+
+<body >   
     
     <div class="container mt-5">
         <div class="text-center">
