--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 </head>
 
-<!-- style="color: #fff; background: rgb(0, 5, 31);" -->
-
-<body >   
+<body style="color: #fff; background: rgb(0, 5, 31);">   
     
     <div class="container mt-5">
         <div class="text-center">
